--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,7 @@
 .logo-img{
     width: 100%;
     height: 100%;
+    /* horizontal-align: middle; */
     background-size: cover;
     transition: background-image 0.2s ease-in-out;
     border: 10px soli6d #04AA6D;
@@ -269,7 +270,7 @@ a{
 }
 
 a:visited {
-    color: #306D4E; /* Change the color of visited links to purple */
+    color: #005246; /* Change the color of visited links to purple */
 }
 
 
