--- a/shopping-cart.css
+++ b/shopping-cart.css
@@ -3,8 +3,17 @@ body {
     text-align: center;
 }
 
+
+.table-container{
+    max-width: 100%;
+    overflow-x: auto;
+    margin-bottom: 20px;
+}
+
+
 table {
     width: 100%;
+
     border-collapse: collapse;
     margin-bottom: 20px;
     color: #306D4E;
@@ -20,7 +29,7 @@ th {
 }
 
 input[type="number"] {
-    width: 40px;
+    width: 40%;
     text-align: center;
     color: #306D4E;
     border: 1px solid #306D4E;
@@ -31,6 +40,7 @@ input[type="number"] {
     padding-bottom: 20px;
     padding-top: 20px;
     color: #306D4E;
+    width: 100%;
 }
 
 .cart-buy {
