--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@
 
 
 .logo{
-    width: 20px;
+    width: auto;
     height: 40px;
 
     background-image: url(./leaf-icon.png);
@@ -77,7 +77,9 @@
 /* Footer */
 
 .footer {
+    clear:both;
     background-color: #04AA6D;
+    color: white;
     width: 100%;
     height: 50px;
     position: absolute;
@@ -86,6 +88,18 @@
     background-repeat: repeat;
     opacity: 0.8;
     
+}
+
+.name-info{
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    padding: 12px;
+}
+
+.footer p {
+    font-size: 18px; 
+    font-weight: bold;
 }
 
 /* Add a black background color to the top navigation */
