--- a/styles.css
+++ b/styles.css
@@ -287,7 +287,7 @@ a{
 }
 
 a:visited {
-    color: #005246; /* Change the color of visited links to purple */
+    color: #005246; /* Change the color of visited link*/
 }
 
 
